--- a/examples/gw150914_audio.ipynb
+++ b/examples/gw150914_audio.ipynb
@@ -11,7 +11,61 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: lalsuite==6.48.1.dev20180620 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (6.48.1.dev20180620)\n",
+      "Requirement already satisfied: pycbc in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (1.12.1)\n",
+      "Requirement already satisfied: numpy>=1.7 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from lalsuite==6.48.1.dev20180620) (1.15.0)\n",
+      "Requirement already satisfied: cython in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (0.26.1)\n",
+      "Requirement already satisfied: argparse>=1.3.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (1.4.0)\n",
+      "Requirement already satisfied: astropy>=2.0.3 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (2.0.8)\n",
+      "Requirement already satisfied: beautifulsoup4>=4.6.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (4.6.0)\n",
+      "Requirement already satisfied: weave>=0.16.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (0.16.0)\n",
+      "Requirement already satisfied: h5py>=2.5 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (2.7.0)\n",
+      "Requirement already satisfied: mpld3>=0.3 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (0.3)\n",
+      "Requirement already satisfied: Mako>=1.0.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (1.0.7)\n",
+      "Requirement already satisfied: matplotlib>=1.5.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (2.1.0)\n",
+      "Requirement already satisfied: scipy>=0.16.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (0.19.0)\n",
+      "Requirement already satisfied: corner>=2.0.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (2.0.1)\n",
+      "Requirement already satisfied: jinja2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (2.9.6)\n",
+      "Requirement already satisfied: unittest2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (1.1.0)\n",
+      "Requirement already satisfied: pillow in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (4.3.0)\n",
+      "Requirement already satisfied: kombine>=0.8.2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (0.8.3)\n",
+      "Requirement already satisfied: six>=1.10.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (1.11.0)\n",
+      "Requirement already satisfied: decorator>=3.4.2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (4.1.2)\n",
+      "Requirement already satisfied: lscsoft-glue>=1.59.3 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (1.59.3)\n",
+      "Requirement already satisfied: emcee==2.2.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (2.2.1)\n",
+      "Requirement already satisfied: requests>=1.2.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pycbc) (2.18.4)\n",
+      "Requirement already satisfied: pytest>=2.8 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from astropy>=2.0.3->pycbc) (3.2.1)\n",
+      "Requirement already satisfied: MarkupSafe>=0.9.2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from Mako>=1.0.1->pycbc) (1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (2.6.1)\n",
+      "Requirement already satisfied: backports.functools_lru_cache in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (1.4)\n",
+      "Requirement already satisfied: subprocess32 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (3.2.7)\n",
+      "Requirement already satisfied: pytz in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (2017.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (0.10.0)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from matplotlib>=1.5.1->pycbc) (2.2.0)\n",
+      "Requirement already satisfied: traceback2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from unittest2->pycbc) (1.4.0)\n",
+      "Requirement already satisfied: olefile in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pillow->pycbc) (0.44)\n",
+      "Requirement already satisfied: pyOpenSSL in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from lscsoft-glue>=1.59.3->pycbc) (17.2.0)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from requests>=1.2.1->pycbc) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from requests>=1.2.1->pycbc) (2.6)\n",
+      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from requests>=1.2.1->pycbc) (1.22)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from requests>=1.2.1->pycbc) (2017.7.27.1)\n",
+      "Requirement already satisfied: py>=1.4.33 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pytest>=2.8->astropy>=2.0.3->pycbc) (1.4.34)\n",
+      "Requirement already satisfied: setuptools in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pytest>=2.8->astropy>=2.0.3->pycbc) (40.0.0)\n",
+      "Requirement already satisfied: linecache2 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from traceback2->unittest2->pycbc) (1.0.0)\n",
+      "Requirement already satisfied: cryptography>=1.9 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (2.0.3)\n",
+      "Requirement already satisfied: asn1crypto>=0.21.0 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from cryptography>=1.9->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (0.22.0)\n",
+      "Requirement already satisfied: enum34 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from cryptography>=1.9->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (1.1.6)\n",
+      "Requirement already satisfied: ipaddress in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from cryptography>=1.9->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (1.0.18)\n",
+      "Requirement already satisfied: cffi>=1.7 in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from cryptography>=1.9->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (1.10.0)\n",
+      "Requirement already satisfied: pycparser in /home/nbuser/anaconda2_501/lib/python2.7/site-packages (from cffi>=1.7->cryptography>=1.9->pyOpenSSL->lscsoft-glue>=1.59.3->pycbc) (2.18)\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install lalsuite=='6.48.1.dev20180620' pycbc"
@@ -19,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -28,60 +82,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: lal in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages\n",
-      "Requirement already satisfied: numpy==1.13.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from lal)\n",
-      "Requirement already satisfied: pycbc in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages\n",
-      "Requirement already satisfied: decorator>=3.4.2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: kombine==0.8.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: Mako>=1.0.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: emcee>=2.2.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: argparse>=1.3.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: matplotlib>=1.3.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: corner>=2.0.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: pyRXP>=2.1.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: beautifulsoup4>=4.6.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: pillow in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: pycbc-glue-obsolete==1.1.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: h5py>=2.5 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: requests>=1.2.1 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: unittest2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: numpy>=1.6.4 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: scipy>=0.13.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: jinja2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: weave>=0.16.0 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: mpld3>=0.3 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from pycbc)\n",
-      "Requirement already satisfied: MarkupSafe>=0.9.2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from Mako>=1.0.1->pycbc)\n",
-      "Requirement already satisfied: python-dateutil in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
-      "Requirement already satisfied: pytz in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
-      "Requirement already satisfied: cycler in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
-      "Requirement already satisfied: pyparsing!=2.0.4,>=1.5.6 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from matplotlib>=1.3.1->pycbc)\n",
-      "Requirement already satisfied: six in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from h5py>=2.5->pycbc)\n",
-      "Requirement already satisfied: traceback2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from unittest2->pycbc)\n",
-      "Requirement already satisfied: linecache2 in /home/nbcommon/anaconda2_410/lib/python2.7/site-packages (from traceback2->unittest2->pycbc)\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1005k  100 1005k    0     0  4612k      0 --:--:-- --:--:-- --:--:-- 4632k\n"
+      "100 1005k  100 1005k    0     0  1005k      0  0:00:01 --:--:--  0:00:01 1090k\n"
      ]
     }
    ],
    "source": [
     "#Set up the libraries we need and download the data\n",
-    "!curl -O -J https://raw.githubusercontent.com/ligo-cbc/binder/master/H-H1_LOSC_4_V2-1126259446-32.gwf"
+    "!curl -O -J https://losc.ligo.org/s/events/GW150914/H-H1_LOSC_4_V2-1126259446-32.gwf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pycbc.frame import read_frame\n",
     "from pycbc.filter import highpass_fir, lowpass_fir\n",
@@ -119,7 +135,7 @@
    "metadata": {},
    "source": [
     "### Downlod your audio file ###\n",
-    " 1. Click 'Data' in the menu above to find the 'Download...' option.\n",
+    " 1. If using JupyterLab, your file should show up in the sidebar\n",
     " 2. Select and download gw150914_h1_chirp.wav"
    ]
   }
